# RoboticsNSU

./: .gitignore
lab1/ex01/: commands.txt
lab2/ex01/: .bashrc  ex01.txt
lab2/ex03/tywin812/: package.xml  setup.cfg  setup.py
lab2/ex04/: colcon_build.txt
lab2/ex05/: rosnode_info.txt  rosnode_list.txt
lab2/ex06/: cmd_vel.txt
lab2/ex07/: rosservice_list.txt
lab2/ex08/: rqt_console.csv  turtlesim_mimic_launch.py
lab2/ex09/full_name_package/: CMakeLists.txt  package.xml
lab2/ex10/text_to_cmd/: package.xml  setup.cfg  setup.py
lab3/ex01/service_full_name/: package.xml  setup.py
lab3/ex02/: pose_speed_x1.yaml  pose_speed_x2.yaml  turtle_cmd_vel_0.mcap
lab3/ex03/: doctor.txt
lab3/ex04/move_to_goal/: package.xml  setup.py
lab3/ex05/action_cleaning_robot/: CMakeLists.txt  package.xml
lab3/ex05/action_cleaning_robot/action/: CleaningTask.action
lab3/ex05/action_cleaning_robot/action_cleaning_robot/: cleaning_action_client.py  cleaning_action_server.py
lab4/ex01/: last_transform.txt  transform.txt
lab4/ex03/turtles_delay/: package.xml  setup.cfg  setup.py
lab5/ex01-02/penguin_robot/: package.xml
lab5/ex03/penguin_robot/: CMakeLists.txt  package.xml
lab5/ex04/penguin_robot_circle/: CMakeLists.txt
lab5/ex05/penguin_eight/: CMakeLists.txt  package.xml
lab5/ex05/penguin_robot/: CMakeLists.txt
lab6/ex01/lidar_robot/: CMakeLists.txt  package.xml
lab6/ex02/depth_camera_robot/: CMakeLists.txt  package.xml
lab6/ex04/lidar_robot/: CMakeLists.txt  package.xml
lab6/ex05/depth_camera_robot/: CMakeLists.txt  package.xml
(+53 files in other folders)
